--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
 <div style="width:80%; margin: 0 auto;">
 <% @articles.each do |article| %>
-<h1><%=article.title%></h1>
+<h1><%= link_to article.title, article %></h1>
 
 <div>
 	<%=article.body%>
 </div>
-<%= link_to "Eliminar", article, method: :delete %>
+<%= link_to "Eliminar", article, method: :delete , class: "be_green" %>
 
 <% end %>
 </table>
