--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,5 @@
-<h1>¡¡Bienvenidos a nuestro blog!!</h1>
-
-<%[1,2,3,4].each do |num|%>
-  <p>:::::	<%=num%></p>
+<%if user_signed_in?%>
+<h1>¡¡Bienvenido <%=current_user.email%></h1>
 <%end%>
+
 
